--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
   "name": "icyah",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/prateekbh/icyah.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/prateekbh/icyah/issues"
-  },
-  "homepage": "https://github.com/prateekbh/icyah#readme",
+  "version": "0.0.1",
+  "private": true,
   "devDependencies": {
-    "preact": "^7.1.0",
-    "webpack": "^1.13.3"
+    "autoprefixer": "^6.5.3",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.9",
+    "babel-preset-es2015": "^6.18.0",
+    "css-loader": "^0.26.1",
+    "postcss-loader": "^1.2.0",
+    "postcss-smart-import": "^0.6.0",
+    "precss": "^1.4.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.14.0"
+  },
+  "dependencies": {
+    "babel-preset-react": "^6.16.0",
+    "preact": "^5.6.0"
+  },
+  "scripts": {
+    "start": "preact-scripts start",
+    "build": "webpack webpack.config.js",
+    "eject": "preact-scripts eject",
+    "test": "preact-scripts test"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/preact-scripts/config/eslint.js"
   }
 }
