--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-loader": "^6.2.9",
     "babel-preset-es2015": "^6.18.0",
     "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "postcss-loader": "^1.2.0",
     "postcss-smart-import": "^0.6.0",
     "precss": "^1.4.0",
@@ -16,7 +17,10 @@
   },
   "dependencies": {
     "babel-preset-react": "^6.16.0",
-    "preact": "^5.6.0"
+    "compression": "^1.6.2",
+    "express": "^4.14.0",
+    "preact": "^5.6.0",
+    "preact-compat": "^3.9.4"
   },
   "scripts": {
     "start": "preact-scripts start",
