--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "postcss-loader": "^1.2.0",
     "postcss-smart-import": "^0.6.0",
+    "preact-router": "^2.0.0",
     "precss": "^1.4.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
