--- a/package.json
+++ b/package.json
@@ -7,23 +7,28 @@
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.9",
     "babel-preset-es2015": "^6.18.0",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "postcss-loader": "^1.2.0",
-    "postcss-smart-import": "^0.6.0",
-    "preact-router": "^2.0.0",
-    "precss": "^1.4.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
     "babel-preset-react": "^6.16.0",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
+    "css-loader": "^0.26.1",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "mongodb": "^2.2.21",
+    "mongoose": "^4.7.7",
+    "mustache-express": "^1.2.4",
     "nodemailer": "^2.7.0",
     "nodemailer-mailgun-transport": "^1.2.2",
+    "postcss-loader": "^1.2.0",
+    "postcss-smart-import": "^0.6.0",
     "preact": "^7.1.0",
     "preact-compat": "^3.9.4",
-    "serve-static": "^1.11.1"
+    "preact-router": "^2.0.0",
+    "precss": "^1.4.0",
+    "serve-static": "^1.11.1",
+    "style-loader": "^0.13.1",
+    "user-management": "^1.0.4",
+    "webpack": "^1.14.0"
   },
   "scripts": {
     "prestart": "npm i",
